--- a/frontend/src/pages/TaxGuidePage.css
+++ b/frontend/src/pages/TaxGuidePage.css
@@ -81,6 +81,7 @@
         position: sticky;
         top: 80px;
         height: fit-content;
+        overflow: hidden;
     }
 }
 
